@@ -1369,42 +1369,6 @@ L<DBIx::Custom>オブジェクトから呼び出すことができます。
     my $dbi = DBIx::Custom->connect(...);
     $dbi->result_class('MyResult');
 
-=head3 キャッシング
-
-タグの解析後のSQLはパフォーマンスの理由のためにキャッシュされます。
-これはC<chace>で設定でき、デフォルトではキャッシュを行う設定です。
-
-    $dbi->cache(1);
-
-キャッシュ方法はC<cache_method>で変更することができます。
-デフォルトのメソッドは以下のようになっていて、
-メモリ上にキャッシュが保存されます。
-
-    $dbi->cache_method(sub {
-        sub {
-            my $self = shift;
-            
-            $self->{_cached} ||= {};
-            
-            if (@_ > 1) {
-                # キャッシュの保存
-                $self->{_cached}{$_[0]} = $_[1] 
-            }
-            else {
-                # キャッシュの取得
-                return $self->{_cached}{$_[0]}
-            }
-        }
-    });
-    
-第一はL<DBIx::Custom>オブジェクトです。
-第二引数はタグが解析される前のSQLです。
-第三引数はタグの解析後のSQLの情報です。これはハッシュのリファレンスです。
-
-第三引数が存在した場合はキャッシュを設定し、
-存在しなかった場合はキャッシュを取得する実装に
-してください。
-
 =head1 サンプル
 
 以下のWikiでサンプルを見ることができます。
