@@ -2,7 +2,8 @@
     - removed from cache() and cache_method() document for a while and cache() value
       become 0 because I find something bug.
     - create_model() return model.
-    
+    - added document of hash filter
+    - adeed EXPERIMENTAL DBIx::Custom::Model method()
 0.1665
     - removed EXPERIMETNAL flag from insert_at(), update_at(), delete_at(), select_at(), insert_param(), not_exists(), select()'s query option, update_param(), where, table tag, each column, safety_character, DBIx::Where, where().
     - added EXPERIMETNAL create_model()
